/*
 * Copyright 2016, TeamDev Ltd. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.examples.todolist;

option (type_url_prefix) = "type.spine.examples.todolist";
option java_package = "org.spine3.examples.todolist";
option java_outer_classname = "FailuresProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";
import "spine/change/value_mismatch.proto";

import "todolist/identifiers.proto";

message CannotUpdateTaskDescription {

    TaskId task_id = 1;

    change.ValueMismatch description_mismatch = 2;
}

message CannotUpdateTaskPriority {

    TaskId task_id = 1;

    change.ValueMismatch priority_mismatch = 2;
}

message CannotUpdateTaskDueDate {

    TaskId task_id = 1;

    change.ValueMismatch due_date_mismatch = 2;
}

message CannotUpdateLabelDetails {

    TaskLabelId label_id = 1;

    change.ValueMismatch label_details_mismatch = 2;
}